fix home button

--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
       <div class="content">
         <div id="large-header" class="large-header">
           <div class="topnav">
-            <a href="#home">Home</a>
+            <a href="index.html">Home</a>
             <a a class="active" href="about.html">About</a>
             <a href="#news">Projects</a>
             <a href="#contact">Contact</a>
@@ -40,7 +40,7 @@
             />
             <div class="media-body">
               <h5 class="mt-0" id="aboutTitle">Top-aligned media</h5>
-              <p id="aboutPara" style="color:aliceblue">
+              <p id="aboutPara" style="color: aliceblue;">
                 Cras sit amet nibh libero, in gravida nulla. Nulla vel metus
                 scelerisque ante sollicitudin. Cras purus odio, vestibulum in
                 vulputate at, tempus viverra turpis. Fusce condimentum nunc ac
