fixed projectst page

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <div class="topnav">
             <a class="active" href="index.html">Home</a>
             <a href="about.html">About</a>
-            <a href="#news">Projects</a>
+            <a href="projects.html">Projects</a>
             <a href="#contact">Contact</a>
           </div>
           <canvas id="demo-canvas"></canvas>
