--- a/projects.html
+++ b/projects.html
@@ -28,8 +28,8 @@
         <div id="large-header" class="large-header">
           <div class="topnav">
             <a href="index.html">Home</a>
-            <a a class="active" href="about.html">About</a>
-            <a href="projects.html">Projects</a>
+            <a href="about.html">About</a>
+            <a a class="active" href="projects.html">Projects</a>
             <a href="#contact">Contact</a>
           </div>
           <div class="media">
